Push is now a Step instead of at a Task level

--- a/examples/templating/acb.yaml
+++ b/examples/templating/acb.yaml
@@ -10,5 +10,4 @@ steps:
 {{ end }}
 
   - cmd: build -t FancyThing:{{.Values.environment}}-{{.Values.version}} .
-
-push: ['FancyThing:{{.Values.environment}}-{{.Values.version}}']
+  - push: ['FancyThing:{{.Values.environment}}-{{.Values.version}}']
